@@ -1,3 +1,9 @@
+2008-09-08 Jens Tkotz <jens@peino.de> 1.5.9-svn-b23
+
+ * Fix: translation domain wrong in lib/stats.php
+
+   Thanks to Niels Baggesen.
+
 2008-09-04 Jens Tkotz <jens@peino.de> 1.5.9-svn-b22
 
  * Fix: &amp; in new Password link caused a invalid request message.
